AL-562 Style Cancel Edit button, fix sticky header overlap

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -125,7 +125,7 @@ h1.title, h2.title
   // background: linear-gradient(to right, #e1d4e1 0%, #63e2d9 100%)
   // -webkit-background-clip: text
   // -webkit-text-fill-color: transparent
-  z-index: 1
+  z-index: 3
   position: fixed
   top: 25px
 
@@ -584,6 +584,13 @@ button.btn
     top 20px
     right: 20%
 
+  &.btn-fixed
+    position: fixed
+    top: 17px
+    display: block
+    text-align: center
+    transition: all 0.5s ease
+
   &.btn-save
     position: fixed
     top: 17px
@@ -609,10 +616,32 @@ button.btn
     transition: all 0.5s ease
 
     &:hover
-      // background: linear-gradient(to right, hsl(160,61%,58%), hsl(144,65%,45%)) !important
-      // background-size: 300%
-      transform: scale(1.05)
       background: #53d5aa
+
+  &.btn-cancel-edit
+    position: fixed
+    top: 17px
+    right: 420px
+    // display: block
+    text-align: center
+    float: right
+    background: #ACC3CF
+    text-transform: uppercase
+    font-weight: 600
+    letter-spacing: 1px
+    width: 100%
+    max-width: 100px
+    padding: 10px
+    margin: 0 auto
+    color: #fff
+    font-size: 11px
+    cursor: pointer
+    border-radius: 4px
+    border: 0
+    transition: all 0.5s ease
+
+    &:hover
+      background: #7F98A5
 
   &.delete-btn.btn-danger.disabled
     color: #9eaeb6
@@ -1074,8 +1103,8 @@ h2.swal2-title
   cursor: pointer
 
 button.swal2-confirm.swal2-styled
-  background: linear-gradient(to right, hsl(160,61%,58%), hsl(144,65%,45%))
-  background-size: 100%
+  // background: linear-gradient(to right, hsl(160,61%,58%), hsl(144,65%,45%))
+  // background-size: 100%
   border: 0
   transition: all 0.5s ease
 
